force-app/main/default/objects/Lead/fields/LossReason__c.field-meta.xml
<CustomField>
    <fullName>LossReason__c</fullName>
    <label>Motif de la perte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ContreLeEnLigneW</fullName>
                <label>Contre le &quot;En Ligne&quot; - W</label>
            </value>
            <value>
                <fullName>EnAttenteFinancementW</fullName>
                <label>En attente de financement - W</label>
            </value>
            <value>
                <fullName>EnAttenteRetraiteW</fullName>
                <label>En attente de sa retraite - W</label>
            </value>
            <value>
                <fullName>EncoreEngageAvecECW</fullName>
                <label>Encore engagé avec son EC - W</label>
            </value>
            <value>
                <fullName>EncoreSalariéProcessRuptureConventionnelleW</fullName>
                <label>Encore salarié - en process rupture conventionnelle - W</label>
            </value>
            <value>
                <fullName>SeRenseigneReflechitW</fullName>
                <label>Se renseigne - réfléchit - W</label>
            </value>
            <value>
                <fullName>Auto Entrepreneur</fullName>
            </value>
            <value>
                <fullName>Candidature RH</fullName>
            </value>
            <value>
                <fullName>concurrence</fullName>
                <label>Concurrence</label>
            </value>
            <value>
                <fullName>Demande à l&#39;étranger</fullName>
            </value>
            <value>
                <fullName>Demande d&#39;un salarié</fullName>
            </value>
            <value>
                <fullName>Doublon</fullName>
            </value>
            <value>
                <fullName>Expert comptable</fullName>
            </value>
            <value>
                <fullName>Hors cible</fullName>
            </value>
            <value>
                <fullName>Inbound LEC</fullName>
            </value>
            <value>
                <fullName>injoignable</fullName>
                <label>Injoignable</label>
            </value>
            <value>
                <fullName>Mauvais numéro</fullName>
            </value>
            <value>
                <fullName>Officéo</fullName>
            </value>
            <value>
                <fullName>Pas de numéro</fullName>
            </value>
            <value>
                <fullName>Projet non viable</fullName>
            </value>
            <value>
                <fullName>Questions sur les apps</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Trop en amont</fullName>
            </value>
            <value>
                <fullName>Demande HS</fullName>
            </value>
            <value>
                <fullName>Envoi vers BGE Ile de France</fullName>
            </value>
            <value>
                <fullName>hors-méthode</fullName>
                <isActive>false</isActive>
                <label>Hors méthode groupe</label>
            </value>
            <value>
                <fullName>Pas de partenaire adapté</fullName>
                <isActive>false</isActive>
                <label>Pas de partenaire adapté</label>
            </value>
            <value>
                <fullName>hors secteur géographique</fullName>
                <isActive>false</isActive>
                <label>hors secteur géographique</label>
            </value>
            <value>
                <fullName>hors-métier</fullName>
                <isActive>false</isActive>
                <label>hors-métier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>