force-app/main/default/objects/Lead/fields/MappingAddress__c.field-meta.xml
<CustomField>
    <fullName>MappingAddress__c</fullName>
    <formula>Street &amp;&quot; &quot;&amp; PostalCode &amp;&quot; &quot;&amp; City &amp;&quot; &quot;&amp; Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse Mapping</label>
    <type>Text</type>
</CustomField>