force-app/main/default/objects/Lead/fields/MappingEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>MappingEmailAddress__c</fullName>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse e-mail Mapping</label>
    <type>Text</type>
</CustomField>