force-app/main/default/objects/Lead/fields/MappingFullName__c.field-meta.xml
<CustomField>
    <fullName>MappingFullName__c</fullName>
    <formula>FirstName &amp;&quot; &quot;&amp;  LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom complet mapping</label>
    <type>Text</type>
</CustomField>