force-app/main/default/objects/Lead/fields/MappingMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MappingMobilePhone__c</fullName>
    <formula>MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Téléphone principal Mapping</label>
    <type>Text</type>
</CustomField>