force-app/main/default/objects/Lead/fields/MeansOfContact__c.field-meta.xml
<CustomField>
    <fullName>MeansOfContact__c</fullName>
    <label>Moyen de contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formulaire</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Atelier</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>