force-app/main/default/objects/Lead/fields/NbMinutesAttenteCall1__c.field-meta.xml
<CustomField>
    <fullName>NbMinutesAttenteCall1__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(DateArriveeEnFileAttente__c ),
    HOUR(TIMEVALUE(DateArriveeEnFileAttente__c))+2  &lt; 9,
    HOUR(TIMEVALUE(DateArriveeEnFileAttente__c))+2  &gt;= 19
  ),
  0,
  (IF(
    ISBLANK(DateCall1Termine__c),
    NOW(),
    DateCall1Termine__c
  ) -  DateArriveeEnFileAttente__c ) * 24 *60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nb Minutes d&#39;Attente pour Call1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>