force-app/main/default/objects/Lead/fields/NextCallDate__c.field-meta.xml
<CustomField>
    <fullName>NextCallDate__c</fullName>
    <label>Date du prochain appel</label>
    <type>DateTime</type>
</CustomField>