force-app/main/default/objects/Lead/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <label>Nombre de création par an</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>