force-app/main/default/objects/Lead/fields/Nombre_de_dossiers__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_dossiers__c</fullName>
    <label>Nombre de dossiers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>