force-app/main/default/objects/Lead/fields/Nombre_de_nouveaux_clients_annuels__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_nouveaux_clients_annuels__c</fullName>
    <label>Nombre de nouveaux clients annuels</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>