force-app/main/default/objects/Lead/fields/NumberOfPageViews__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPageViews__c</fullName>
    <description>Hubspot</description>
    <label>Nombre de pages vue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>