force-app/main/default/objects/Lead/fields/NumeroCompteBaseGI__c.field-meta.xml
<CustomField>
    <fullName>NumeroCompteBaseGI__c</fullName>
    <description>l&#39;identifiant BaseGI du compte créé à partir de la Lead</description>
    <label>Numero Compte BaseGI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>