force-app/main/default/objects/Lead/fields/NumeroIndividuBaseGI__c.field-meta.xml
<CustomField>
    <fullName>NumeroIndividuBaseGI__c</fullName>
    <description>l&#39;identifiant BaseGI de l&#39;individu créé à partir de la Lead</description>
    <label>Numero Individu BaseGI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>