force-app/main/default/objects/Lead/fields/Offres__c.field-meta.xml
<CustomField>
    <fullName>Offres__c</fullName>
    <description>Les offres disponibles pour les propositions comerciales des Account Executive. La disponibilité de ces offres dépend du cabinet partenaire</description>
    <label>Offres</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Branding__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Offre Novaa</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Offre Supernovaa</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Offre BNC</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Visa fiscal</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Offre social mandataire</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Offre Création</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Offre LEC</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Offre Auto-entrepreneur</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Offre Cible</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Offre hors cible</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Offre Social</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>