force-app/main/default/objects/Lead/fields/OrigineWebsite__c.field-meta.xml
<CustomField>
    <fullName>OrigineWebsite__c</fullName>
    <label>Branding d&#39;entrée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novaa</fullName>
            </value>
            <value>
                <fullName>Incityz</fullName>
            </value>
            <value>
                <fullName>Onlicorn</fullName>
            </value>
            <value>
                <fullName>Tiime</fullName>
            </value>
            <value>
                <fullName>TMC</fullName>
                <label>Trouver mon comptable.com</label>
            </value>
            <value>
                <fullName>LEC</fullName>
                <label>L&#39;Expert-Comptable.com</label>
            </value>
            <value>
                <fullName>Sesame</fullName>
            </value>
            <value>
                <fullName>Start.fr</fullName>
            </value>
            <value>
                <fullName>Pepit</fullName>
            </value>
            <value>
                <fullName>Evocompta</fullName>
            </value>
            <value>
                <fullName>Goneo</fullName>
            </value>
            <value>
                <fullName>Ola-compta</fullName>
            </value>
            <value>
                <fullName>LNEC</fullName>
                <label>Le Net Expert Comptable</label>
            </value>
            <value>
                <fullName>LEC Lille</fullName>
                <label>L-Expert-Comptable Lille</label>
            </value>
            <value>
                <fullName>Condillac</fullName>
            </value>
            <value>
                <fullName>Auficom</fullName>
            </value>
            <value>
                <fullName>Proxicompta</fullName>
            </value>
            <value>
                <fullName>Progressive</fullName>
                <label>Progressive / Novaa</label>
            </value>
            <value>
                <fullName>Companeo</fullName>
            </value>
            <value>
                <fullName>Qonto</fullName>
            </value>
            <value>
                <fullName>TiimeAE</fullName>
            </value>
            <value>
                <fullName>Blog du dirigeant</fullName>
            </value>
            <value>
                <fullName>Ocompta</fullName>
                <isActive>false</isActive>
                <label>Ocompta</label>
            </value>
            <value>
                <fullName>Queexi</fullName>
                <isActive>false</isActive>
                <label>Queexi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>