force-app/main/default/objects/Lead/fields/Partenaire__c.field-meta.xml
<CustomField>
    <fullName>Partenaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partenaire</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <errorMessage>Le compte partenaire doit être de type &#39;EC Partenaire&#39;. Pour les Partenariat, seuls les cabinets groupes sont valides.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>EC Partenaire</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Partenariat</value>
        </filterItems>
        <filterItems>
            <field>$Source.PartnerType__c</field>
            <operation>equals</operation>
            <value>Groupe</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Partenaire)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>