force-app/main/default/objects/Lead/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>liste des partenaires</description>
    <label>Partenaire(old)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AO2C</fullName>
            </value>
            <value>
                <fullName>ATR COMPTA</fullName>
            </value>
            <value>
                <fullName>CABINET AUTRAN</fullName>
            </value>
            <value>
                <fullName>CFN AUDIT</fullName>
            </value>
            <value>
                <fullName>CPA AUDIT</fullName>
            </value>
            <value>
                <fullName>CTN FRANCE</fullName>
            </value>
            <value>
                <fullName>CULTURE COMPTABLE</fullName>
            </value>
            <value>
                <fullName>DESPREZ</fullName>
            </value>
            <value>
                <fullName>FID&#39;OUEST</fullName>
            </value>
            <value>
                <fullName>FINANCE CONCEPTION</fullName>
            </value>
            <value>
                <fullName>FINE GESTION</fullName>
            </value>
            <value>
                <fullName>HLB COFIME</fullName>
            </value>
            <value>
                <fullName>LYON EXPERTISE</fullName>
            </value>
            <value>
                <fullName>OPTIMA EXPERTS</fullName>
            </value>
            <value>
                <fullName>QUALIANS</fullName>
            </value>
            <value>
                <fullName>RB CONSULTING</fullName>
            </value>
            <value>
                <fullName>XPERTYS</fullName>
            </value>
            <value>
                <fullName>AVENIR EXPERT</fullName>
            </value>
            <value>
                <fullName>DOLBEAU EXPERTISE</fullName>
            </value>
            <value>
                <fullName>AGC</fullName>
            </value>
            <value>
                <fullName>HLB COFIME BUREAU</fullName>
            </value>
            <value>
                <fullName>FIMECO</fullName>
            </value>
            <value>
                <fullName>RC EXPERTISE</fullName>
            </value>
            <value>
                <fullName>EXPERT COMPTABLE</fullName>
            </value>
            <value>
                <fullName>COGEP</fullName>
            </value>
            <value>
                <fullName>REVISION AUDIT CONSEILS</fullName>
            </value>
            <value>
                <fullName>OPTION REEL</fullName>
            </value>
            <value>
                <fullName>CCPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>