force-app/main/default/objects/Lead/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Détail Partenariat</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La valeur de partenariat n&#39;existe pas</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partenariat</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Partenariat)</relationshipLabel>
    <relationshipName>Partenariat</relationshipName>
    <type>Lookup</type>
</CustomField>