force-app/main/default/objects/Lead/fields/PartnerType__c.field-meta.xml
<CustomField>
    <fullName>PartnerType__c</fullName>
    <label>Type de partenaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hors Groupe</fullName>
                <default>true</default>
                <label>Hors Groupe</label>
            </value>
            <value>
                <fullName>Groupe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>