force-app/main/default/objects/Lead/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Créateur</fullName>
            </value>
            <value>
                <fullName>Entrepreneur</fullName>
            </value>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>EC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>