force-app/main/default/objects/Lead/fields/PromoCode__c.field-meta.xml
<CustomField>
    <fullName>PromoCode__c</fullName>
    <label>Code Promo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>