force-app/main/default/objects/Lead/fields/QualificationDone__c.field-meta.xml
<CustomField>
    <fullName>QualificationDone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Après la Qualification de la Lead cette case se coche et ouvre l&#39;accès au composant Transfert</description>
    <label>Qualification effectuée</label>
    <type>Checkbox</type>
</CustomField>