force-app/main/default/objects/Lead/fields/RDV_EC_confirmer__c.field-meta.xml
<CustomField>
    <fullName>RDV_EC_confirmer__c</fullName>
    <description>indicateur de rappel pour prendre un RDV avec un Cabinet.</description>
    <label>RDV EC à confirmer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>