force-app/main/default/objects/Lead/fields/Rendez_vous__c.field-meta.xml
<CustomField>
    <fullName>Rendez_vous__c</fullName>
    <label>Date du rendez-vous</label>
    <type>DateTime</type>
</CustomField>