force-app/main/default/objects/Lead/fields/SAL__c.field-meta.xml
<CustomField>
    <fullName>SAL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAL</label>
    <type>Checkbox</type>
</CustomField>