force-app/main/default/objects/Lead/fields/SALDate__c.field-meta.xml
<CustomField>
    <fullName>SALDate__c</fullName>
    <label>Date SAL</label>
    <type>DateTime</type>
</CustomField>