force-app/main/default/objects/Lead/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Signature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liste_des_BU</valueSetName>
    </valueSet>
</CustomField>