force-app/main/default/objects/Lead/fields/SignVelocity__c.field-meta.xml
<CustomField>
    <fullName>SignVelocity__c</fullName>
    <description>En jours</description>
    <formula>DateContractSign__c -  DateTransfert__c</formula>
    <inlineHelpText>En jours</inlineHelpText>
    <label>Vélocité signature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>