force-app/main/default/objects/Lead/fields/SiteOrigineSMS__c.field-meta.xml
<CustomField>
    <fullName>SiteOrigineSMS__c</fullName>
    <description>Champ système pour signature sms</description>
    <formula>text( OrigineWebsite__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SiteOrigineSMS</label>
    <type>Text</type>
</CustomField>