force-app/main/default/objects/Lead/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>UtmSource__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>