force-app/main/default/objects/Lead/fields/SourceDetailPartner__c.field-meta.xml
<CustomField>
    <fullName>SourceDetailPartner__c</fullName>
    <label>Détail de la source (partenaire)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novaa</fullName>
            </value>
            <value>
                <fullName>Incityz</fullName>
            </value>
            <value>
                <fullName>Condillac</fullName>
            </value>
            <value>
                <fullName>LEC Lille</fullName>
            </value>
            <value>
                <fullName>Goneo</fullName>
            </value>
            <value>
                <fullName>Ola Compta</fullName>
            </value>
            <value>
                <fullName>LNEC</fullName>
            </value>
            <value>
                <fullName>Onlicorn</fullName>
            </value>
            <value>
                <fullName>Ô Compta</fullName>
            </value>
            <value>
                <fullName>Cosi</fullName>
            </value>
            <value>
                <fullName>Evo compta Metz</fullName>
            </value>
            <value>
                <fullName>Evo compta Nancy</fullName>
            </value>
            <value>
                <fullName>Up expert</fullName>
            </value>
            <value>
                <fullName>LEC Valenciennes</fullName>
            </value>
            <value>
                <fullName>Confluence Nantes</fullName>
            </value>
            <value>
                <fullName>Confluence Rennes</fullName>
            </value>
            <value>
                <fullName>Pépit Strasbourg</fullName>
            </value>
            <value>
                <fullName>Pépit Rouen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>