force-app/main/default/objects/Lead/fields/SourceDetails__c.field-meta.xml
<CustomField>
    <fullName>SourceDetails__c</fullName>
    <label>Détail de la source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Types_de_sources</valueSetName>
    </valueSet>
</CustomField>