force-app/main/default/objects/Lead/fields/SourceSPE__c.field-meta.xml
<CustomField>
    <fullName>SourceSPE__c</fullName>
    <label>Source SPE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>