force-app/main/default/objects/Lead/fields/SQL_Old__c.field-meta.xml
<CustomField>
    <fullName>SQL_Old__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SQL (Old)</label>
    <type>Checkbox</type>
</CustomField>