force-app/main/default/objects/Lead/fields/SQLDate_Old__c.field-meta.xml
<CustomField>
    <fullName>SQLDate_Old__c</fullName>
    <label>Date SQL (Old)</label>
    <type>DateTime</type>
</CustomField>