force-app/main/default/objects/Lead/fields/SQLVelocity__c.field-meta.xml
<CustomField>
    <fullName>SQLVelocity__c</fullName>
    <description>En jours</description>
    <formula>DateTransfert__c -  CreatedDate</formula>
    <inlineHelpText>En jours</inlineHelpText>
    <label>Vélocité Transfert</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>