force-app/main/default/objects/Lead/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Etape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call 1</fullName>
            </value>
            <value>
                <fullName>Call 2</fullName>
            </value>
            <value>
                <fullName>Partenaire</fullName>
            </value>
            <value>
                <fullName>Creation</fullName>
                <label>Créa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>