force-app/main/default/objects/Lead/fields/STOPNurturing__c.field-meta.xml
<CustomField>
    <fullName>STOPNurturing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STOP Nurturing</label>
    <type>Checkbox</type>
</CustomField>