force-app/main/default/objects/Lead/fields/TEMP_convertProject__c.field-meta.xml
<CustomField>
    <fullName>TEMP_convertProject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEMP_convertProject</label>
    <type>Checkbox</type>
</CustomField>