force-app/main/default/objects/Lead/fields/TemperatureDetails__c.field-meta.xml
<CustomField>
    <fullName>TemperatureDetails__c</fullName>
    <label>Détails température</label>
    <type>TextArea</type>
</CustomField>