force-app/main/default/objects/Lead/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>TEXT( 
FLOOR (LastModifiedDate - CreatedDate) 
) &amp; &quot; Journées &quot; &amp; 
TEXT( 
FLOOR (MOD ((LastModifiedDate- CreatedDate) * 1440,1440)) 
) &amp;&quot; Minutes &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <type>Text</type>
</CustomField>