force-app/main/default/objects/Lead/fields/TiimeTransferDate__c.field-meta.xml
<CustomField>
    <fullName>TiimeTransferDate__c</fullName>
    <label>Date de transfert à Tiime</label>
    <type>DateTime</type>
</CustomField>