force-app/main/default/objects/Lead/fields/TmcComments__c.field-meta.xml
<CustomField>
    <fullName>TmcComments__c</fullName>
    <label>Commentaires du Sales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>