force-app/main/default/objects/Lead/fields/TransferHour__c.field-meta.xml
<CustomField>
    <fullName>TransferHour__c</fullName>
    <formula>TIMEVALUE( DateTransfert__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heure de transfert</label>
    <type>Time</type>
</CustomField>