force-app/main/default/objects/Lead/fields/TransferMonitoring__c.field-meta.xml
<CustomField>
    <fullName>TransferMonitoring__c</fullName>
    <label>Suivi Transfert</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creation</fullName>
                <label>Créa</label>
            </value>
            <value>
                <fullName>Partenaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>