force-app/main/default/objects/Lead/fields/TransmittedBGEIdf__c.field-meta.xml
<CustomField>
    <fullName>TransmittedBGEIdf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transmis à BGE Idf</label>
    <type>Checkbox</type>
</CustomField>