force-app/main/default/objects/Lead/fields/Type_de_renvoi__c.field-meta.xml
<CustomField>
    <fullName>Type_de_renvoi__c</fullName>
    <description>Ce champ est rempli si la lead a été renvoyée depuis une Créa et renseigne quel type de renvoi a été effectuée.</description>
    <label>Type de renvoi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Erreur de casting</fullName>
            </value>
            <value>
                <fullName>Lead en cours</fullName>
            </value>
            <value>
                <fullName>Lead hors cible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>