force-app/main/default/objects/Lead/fields/TypeOfLead__c.field-meta.xml
<CustomField>
    <fullName>TypeOfLead__c</fullName>
    <formula>IF(ContractSign__c = true, &quot;Client&quot;,
			IF(SQL__c = true, &quot;SQL&quot;,
						IF( SAL__c = true, &quot;SAL&quot;,
									IF(SQL_Old__c = true, &quot;MQL&quot;,&quot;MCL&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de lead</label>
    <type>Text</type>
</CustomField>