force-app/main/default/objects/Lead/fields/TypeOfMail__c.field-meta.xml
<CustomField>
    <fullName>TypeOfMail__c</fullName>
    <label>Type de messagerie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google Calendar</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>Office 365</fullName>
            </value>
            <value>
                <fullName>I-Cloud</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>