force-app/main/default/objects/Lead/fields/TypeOfNeed__c.field-meta.xml
<CustomField>
    <fullName>TypeOfNeed__c</fullName>
    <label>Type de besoin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Création</fullName>
            </value>
            <value>
                <fullName>Comptabilité</fullName>
            </value>
            <value>
                <fullName>Création et Comptabilité</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>