force-app/main/default/objects/Lead/fields/UtmCampaign__c.field-meta.xml
<CustomField>
    <fullName>UtmCampaign__c</fullName>
    <label>Campagne</label>
    <length>100</length>
    <type>Text</type>
</CustomField>