force-app/main/default/objects/Lead/fields/UtmContent__c.field-meta.xml
<CustomField>
    <fullName>UtmContent__c</fullName>
    <label>Utm Content</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>form-sitebar</fullName>
            </value>
            <value>
                <fullName>form-footer</fullName>
            </value>
            <value>
                <fullName>cta-sidebar</fullName>
            </value>
            <value>
                <fullName>cta-footer</fullName>
            </value>
            <value>
                <fullName>cta-inline</fullName>
            </value>
            <value>
                <fullName>popin</fullName>
            </value>
            <value>
                <fullName>link-text</fullName>
            </value>
            <value>
                <fullName>link-image</fullName>
            </value>
            <value>
                <fullName>ling-logo</fullName>
            </value>
            <value>
                <fullName>top-bar</fullName>
            </value>
            <value>
                <fullName>foot-bar</fullName>
            </value>
            <value>
                <fullName>chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>