force-app/main/default/objects/Lead/fields/UtmGroup__c.field-meta.xml
<CustomField>
    <fullName>UtmGroup__c</fullName>
    <label>Utm Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>