force-app/main/default/objects/Lead/fields/UtmL__c.field-meta.xml
<CustomField>
    <fullName>UtmL__c</fullName>
    <label>Utm Lp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>